<resources>
    <string name="app_name" translatable="false">ElderCare</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">Phone number</string>
    <string name="sign_up">Sign Up</string>
    <string name="elderly">Elderly</string>
    <string name="caregiver">Caregiver</string>
    <string name="welcome_to">Welcome to</string>
    <string name="choose_role">Choose role:</string>
    <string name="elderly_pin">Enter PIN code</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="your_patients">Your Elderly</string>
    <string name="no_patients_text">You dont have any elderly</string>
    <string name="add_patient_button">Add elderly button</string>
    <string name="back_to_patient_home">Back to elderly Home</string>
    <string name="add_patient">Add elderly button</string>
    <string name="back_to_patient_home_page">Back to elderly Home Page</string>
    <string name="meal_calendar">Meal Calendar</string>
    <string name="edit_meal">Edit Meal</string>
    <string name="meal_name">Meal Name:</string>
    <string name="suggested_meals">Suggested Meals:</string>
    <string name="mark_this_meal_as_eaten">Mark this meal as \"Eaten\"</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="enter_pin">Enter PIN code</string>
    <string name="enter_elderly_username">Enter elderly username</string>
    <string name="add_new_elder_text">Add new elderly</string>
    <string name="add_existing_elder_text">Add existing elderly</string>
    <string name="add_new_elderly">Add</string>
    <string name="elder_settings_icon">Caregiver Settings Icon For Deletion</string>
    <string name="back_to_patients_list">Back to elderly list</string>
    <string name="patient_name_placeholder">Elderly Name</string>
    <string name="meals">Meals</string>
    <string name="allergies">Allergies</string>
    <string name="alert_history">Alert History</string>
    <string name="elderly_settings">Elderly Settings</string>
    <string name="breakfast">Breakfast</string>
    <string name="dinner">Dinner</string>
    <string name="lunch">Lunch</string>
    <string name="add_meal">Add Meal</string>
    <string name="meal_type">Meal Type:</string>
    <string name="meal_to_eat">Meal to Eat:</string>
    <string name="please_enter_all_info">Please Enter All Info</string>
    <string name="error">Error: Please Try Again</string>
    <string name="delete_this_meal">Delete This Meal?</string>
    <string name="elderlySettings">Elderly Settings</string>
    <string name="language">Language</string>
    <string name="name">Name: </string>
    <string name="enter_elderly_first_name">Enter elderly first name: </string>
    <string name="enter_elderly_last_name">Enter elder last name: </string>
    <string name="enter_your_first_name">Enter your first name: </string>
    <string name="enter_year_of_birth">Enter year of birth: </string>
    <string name="enter_elderly_pin">Enter new elderly pin: </string>
    <string name="enter_elderly_phone_number">Enter elderly phone number: </string>
    <string name="enter_allergies_if_any">Enter allergies (if any): </string>
    <string name="dont_have_account">Don’t have an account? </string>
    <string name="hello_caregiver">Hello CareGiver</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="email">Email</string>
    <string name="patient_allergies">Patient Allergies:</string>
    <string name="enter_new_elder_pin">Enter new elder pin</string>
    <string name="enter_the_elder_phone_number">Enter the elder phone number</string>
    <string name="enter_elder_first_name">Enter elder first name</string>
    <string name="enter_elder_user_id">Enter elder ID</string>
    <string name="success_image" translatable="false">Success image checkbox</string>
    <string name="you_dont_have_any_patients">You don\'t have any patients</string>
    <string name="click_the_plus_button_to_add">Click the plus button to add!</string>
    <string name="your_patient_has_been_added">Your Patient has been added!</string>
    <string name="delete_confirmation_image" translatable="false">Are you sure you want to delete image</string>
    <string name="are_you_sure_you_want_delete">Are you sure you want to remove</string>
    <string name="yes_confirmation">Yes</string>
    <string name="no_confirmation">No</string>
    <string name="snack1">First Snack</string>
    <string name="snack2">Second Snack</string>
    <string name="snack3">Third Snack</string>
    <string name="lang_en" translatable="false">en</string>
    <string name="lang_sv" translatable="false">sv</string>
    <string name="first_time_use_popup">First time use</string>
    <string name="enter_new_allergy">Enter new allergy</string>
    <string name="submit">Submit</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="meal_history">Meal History</string>
    <string name="hi" formatted="true">Hi %1$s 👋🏻</string>
    <string name="no_planned_meals">You have no planned meals</string>
    <string name="register_eaten" formatted="true">Register that you have eaten %1s</string>
    <string name="next_meal">Next meal: %1s at %2s</string>
    <string name="cancel">Cancel</string>
    <string name="countdown">Countdown: %1d</string>
    <string name="reminder_to_eat">Reminder to eat %1s!</string>
    <string name="click_here_meal">Click here to go to your meal</string>
    <string name="reset_password">Reset password</string>

</resources>