<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <!-- Include Language switcher button/toggle -_- -->
    <include layout="@layout/activity_language_toggle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".Register">

        <TextView
            android:textStyle="bold"
            android:textSize="20sp"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to" />
        <TextView
            android:textStyle="bold"
            android:textSize="32sp"
            android:layout_marginBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name" />
        <TextView
            android:textStyle="bold"
            android:textSize="32sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/choose_role" />

        <Button
            android:id="@+id/elderlyButton"
            android:text="@string/elderly"
            android:textSize="30sp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <Button
            android:id="@+id/caregiverButton"
            android:text="@string/caregiver"
            android:textSize="30sp"
            android:layout_marginHorizontal="30dp"
            android:layout_width="match_parent"
            android:layout_height="100dp" />

    </LinearLayout>
</RelativeLayout>