<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="0dp"
    android:background="@drawable/rounded_corner_confirmation_box">

    <ImageView
        android:id="@+id/delete_confirmation_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:contentDescription="@string/delete_confirmation_image"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/delete_confirmation_img" />

    <TextView
        android:id="@+id/patientRemove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/are_you_sure_you_want_delete"
        android:textAppearance="@style/your_patients"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginBottom="20dp">

    <Button
        android:id="@+id/yes_im_sure_button"
        android:layout_marginRight="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/yes_confirmation" />

    <Button
        android:id="@+id/no_im_not_sure_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/no_confirmation" />
    </LinearLayout>
</LinearLayout>
