<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:padding="15dp">
    <!-- Arrow & text to go back to the previous page -->
    <LinearLayout
        android:id="@+id/backToPatientsList"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/back_arrow_icon"
            android:contentDescription="@string/back_to_patients_list" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back_to_patients_list"
            android:textSize="17sp" />
    </LinearLayout>

    <!-- Patient Cards -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/elderlySettings"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/purple"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/name"
                android:textSize="24sp"
                android:textColor="@color/red"
                android:paddingBottom="15dp"/>
            <TextView
                android:id="@+id/patient_name_placeholder"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/patient_name_placeholder"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/gray"
                android:paddingBottom="15dp"/>
        </LinearLayout>
        <!-- Meals Card -->
        <LinearLayout
            android:id="@+id/mealsCard"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@color/light_gray"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginTop="7sp"
            android:layout_marginBottom="7sp">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/language"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="@color/purple"
                android:paddingStart="15sp"
                android:paddingEnd="30sp"
                android:layout_weight="1"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/language"
                android:contentDescription="@string/meals"
                />

        </LinearLayout>


    </LinearLayout>
</LinearLayout>
