<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="0dp"
    android:background="@drawable/rounded_corners_elder_cards">

    <!-- Success checkbox -->
    <ImageView
        android:id="@+id/successImageView"
        android:layout_width="180dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:contentDescription="@string/success_image"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/success" />

    <TextView
        android:id="@+id/patientAdded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/your_patient_has_been_added"
        android:textAppearance="@style/your_patients"
        android:textSize="20sp" />

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:layout_margin="20dp"
        android:text="@string/yes_confirmation" />
</LinearLayout>
