<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Forgot Password"
            android:textStyle="bold"
            android:textColor="@color/purple"
            android:textAlignment="center"
            android:textSize="40sp" />

        <!-- Caregivers Image -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="175dp"
            android:src="@drawable/caregivers_login_image"
            android:contentDescription="@string/welcome_back" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:hint="@string/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/resetButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="16sp"
            android:text="Reset Password" />

        <!-- Already have an account text + Login text -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <!-- Login Text -->
            <TextView
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginStart="10dp"
                android:id="@+id/loginNow"
                android:text="@string/login"
                android:textColor="@color/purple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>